# data-visualization-air-quality-in-india

./: .gitignore  README.md  main.py  pyproject.toml
dashboard/: __init__.py  config.py  layout.py  router.py  theme.py
dashboard/components/: __init__.py  charts.py  filters.py  kpi_cards.py
dashboard/data/: __init__.py  loader.py  repositories.py  schema.py  transform.py  transforms.py
dashboard/pages/: __init__.py  _context.py  city_ranking.py  correlation.py  danger_frequency.py  geography.py  insights.py  overview.py  temporal.py
dashboard/pages/correlation/: __init__.py  charts.py  data.py  insights.py  view.py
dashboard/pages/geography/: __init__.py  charts.py  data.py  view.py
dashboard/pages/insights/: __init__.py  charts.py  data.py  view.py
dashboard/pages/overview/: __init__.py  charts.py  data.py  view.py
dashboard/pages/temporal/: __init__.py  charts.py  data.py  view.py
preprocessing/: __init__.py  handle_missing_values.py
