[project]
name = "data-visualization-air-quality-in-india"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "geopy>=2.4.1",
    "kagglehub>=0.3.6",
    "matplotlib>=3.10.8",
    "pandas>=3.0.2",
    "plotly>=6.6.0",
    "seaborn>=0.13.2",
    "streamlit>=1.56.0",
]
